--- a/VegIDB/package.json
+++ b/VegIDB/package.json
@@ -10,13 +10,21 @@
     "json": "^9.0.6",
     "react": "16.8.3",
     "react-native": "^0.59.6",
+    "react-native-action-button": "^2.8.5",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-ionicons": "^4.5.5",
     "react-native-material-kit": "^0.5.1",
+    "react-native-super-grid": "^3.0.3",
+    "react-native-svg": "^9.4.0",
+    "react-native-svg-charts": "^5.2.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-sliding-up-panel": "^2.2.0",
+    "tcomb-form-native": "^0.6.20"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
@@ -28,5 +36,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./src/assets/fonts/"
+    ]
   }
 }
